[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = "0.3.1"
rand_core = "0.5.1"
fff = "0.2.3"
groupy = "0.3.1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand_xorshift = "0.2.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = []

